[package]
name = "pg_pii_vault"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_pii_vault"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
aes-gcm = "0.10"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde_json = "1.0"
once_cell = "1.19"
base64 = "0.22.1"
hex = "0.4"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
